--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.Practica1"
         tools:targetApi="31">
         <activity
+            android:name=".SplashActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Splash"
+            android:exported="false"
+            android:theme="@style/Theme.Practica1" />
+        <activity
+            android:name=".Verificacion_Usuario"
+            android:exported="false" />
+        <activity
             android:name=".ActivityRegistro"
             android:exported="false" />
         <activity
