--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Practica1"
         tools:targetApi="31">
         <activity
+            android:name=".ListaUsuariosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RecuperarContraActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashActivity"
             android:exported="false" />
         <activity
